--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,26 +1,3 @@
-.button {
-  display: inline-flex;
-  border: 0;
-  outline: 0;
-  font-size: 16px;
-  border-radius: 10px;
-  padding: 8px;
-  background-color: #ebecf0;
-  text-shadow: 1px 1px 0 white;
-  text-transform: capitalize;
-
-  color: #babecc;
-  font-weight: bold;
-  box-shadow: -5px -5px 20px white, 5px 5px 20px #babecc;
-  transition: all 0.2s ease-in-out;
-  cursor: pointer;
-  font-weight: 600;
-}
-
-.button:hover {
-  box-shadow: -2px -2px 5px white, 2px 2px 5px #babecc;
-}
-
-.button:active {
-  box-shadow: inset 1px 1px 2px #babecc, inset -1px -1px 2px white;
+.form__btn {
+  margin: 0 auto;
 }
